--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <base href="public/">
   <meta charset="UTF-8">
@@ -7,19 +8,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Algerian National Team</title>
-  
-  <link rel="stylesheet" href="style/style.css">
+
+  <link rel="stylesheet" href="style.css">
+  <script type="module" src="main.js"></script>
   <style>
-  
-    
+
+
   </style>
 </head>
 
 <body>
   <h2>The matches of the Algerian national team under the leadership of coach Djamel Belmadi</h2>
-  <!--
-  <button class="update_btn">update</button>
-  -->
   <table>
     <thead>
       <tr>
@@ -32,7 +31,6 @@
     </thead>
     <tbody></tbody>
   </table>
-  
-  <script type="module" src="javascript/main.js"></script>
 </body>
+
 </html>
