--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="en">
 
 <head>
-  <base href="public/">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Algerian National Team</title>
 
-  <link rel="stylesheet" href="style.css">
-  <script type="module" src="main.js"></script>
+  <link rel="stylesheet" href="/public/style.css">
+  <script type="module" src="/public/main.js"></script>
   <style>
 
 
