--- a/admin/index.html
+++ b/admin/index.html
@@ -8,8 +8,8 @@
 
   <title>AlgSoccer | Admin</title>
 
-  <link rel="stylesheet" href="style.css">
-  <script type="module" src="main.js"></script>
+  <link rel="stylesheet" href="./style.css">
+  <script type="module" src="./main.js"></script>
 </head>
 
 <body>
