--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
   <title>Algerian National Team</title>
 
-  <link rel="stylesheet" href="./public/style.css">
-  <script type="module" src="./public/main.js"></script>
+  <link rel="stylesheet" href="./dist/style.css">
+  <script type="module" src="./dist/main.js"></script>
   <style>
 
 
