--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 
 <body>
   <h2>The matches of the Algerian national team under the leadership of coach Djamel Belmadi</h2>
+  <div class="boxs">
+    <div class="box win"></div>
+    <div class="box loss"></div>
+    <div class="box draw"></div>
+  </div>
   <table>
     <thead>
       <tr>
