--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <div class="box loss"></div>
     <div class="box draw"></div>
   </div>
+  <div class="Goals"></div>
   <table>
     <thead>
       <tr>
@@ -30,7 +31,7 @@
         <td>Team 1</td>
         <td>Score</td>
         <td>Team 2</td>
-        <td>Coach</td>
+        <!--td>Coach</td-->
       </tr>
     </thead>
     <tbody></tbody>
