--- a/admin/index.html
+++ b/admin/index.html
@@ -13,45 +13,26 @@
 </head>
 
 <body>
+
+<fieldset>
+  <legend>Insert New Game</legend>
+
   <form>
-
     <div class="FormDate">
-      <input type="number" name="day" placeholder="day">
-      <select name="month">
-        <option value="jan">jan</option>
-        <option value="feb">feb</option>
-        <option value="mar">mar</option>
-        <option value="apr">apr</option>
-        <option value="may">may</option>
-        <option value="jun">jun</option>
-        <option value="jul">jul</option>
-        <option value="aug">aug</option>
-        <option value="sep">sep</option>
-        <option value="oct">oct</option>
-        <option value="nov">nov</option>
-        <option value="dec">dec</option>
-      </select>
-      <select name="year">
-        <option value="2022">2022</option>
-        <option value="2023">2023</option>
-        <option value="2024">2024</option>
-      </select>
+      <input type="date" name="date" id="date" />
     </div>
-
     <div class="FormCoach">
       <input type="text" name="Coach" value="Jamal Belmadi" placeholder="coach">
     </div>
-
     <div class="FormScore">
       <input type="text" name="Team_1" value="ALGERIA 🇩🇿">
       <input type="number" name="Gools_1" placeholder="Alg scor">
       <input type="text" name="Team_2" placeholder="team 2">
       <input type="number" name="Gools_2" placeholder="team 2 scor">
     </div>
-    
     <button>submit</button>
-    
   </form>
+</fieldset>
 
 </body>
 
