--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <title>Algerian National Team</title>
 
+  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/329/329904.png" type="image/png">
   <link rel="stylesheet" href="./dist/style.css">
   <script type="module" src="./dist/main.js"></script>
   <style>
