--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <h2>The matches of the Algerian national team under the leadership of coach Djamel Belmadi</h2>
+  <h1>The matches of the Algerian national team under the leadership of coach <mark>Djamel Belmadi</mark></h1>
   <div class="boxs">
     <div class="box win"></div>
     <div class="box loss"></div>
@@ -32,6 +32,7 @@
         <td>Team 1</td>
         <td>Score</td>
         <td>Team 2</td>
+        <td>Type</td>
         <!--td>Coach</td-->
       </tr>
     </thead>
