--- a/admin/index.html
+++ b/admin/index.html
@@ -33,7 +33,7 @@
     </div>
     <div class="FormCoach">
       <label for="Coach">Coach</label>
-      <input type="text" name="Coach" id="Coach" value="Jamal Belmadi" placeholder="coach">
+      <input type="text" name="Coach" id="Coach" value="Vladimir Petkovic" placeholder="coach">
     </div>
     <label for="Team_2">Score</label>
     <div class="FormScore">
