--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <h1>The matches of the Algerian national team under the leadership of coach <mark>Djamel Belmadi</mark></h1>
+  <h1>The matches of the Algerian national team under the leadership of coach <mark>Vladimir Petkovic</mark> <s>Djamel Belmadi</s></h1>
   <div class="boxs">
     <div class="box win"></div>
     <div class="box loss"></div>
